fix(css): hide katex scrollbar if unnecessary

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -28,6 +28,6 @@ footer {
 }
 
 .katex-display > .katex {
-	overflow-x: scroll;
+	overflow-x: auto;
 	overflow-y: hidden;
 }
